# VoidLine

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  demo_runner.py  integration_iso3.py  pyproject.toml  requirements.txt  visualize_hero.py
adapter/: __init__.py  constraint_generator.py  scheme.py
docs/: portfolio_positioning.md
docs/checkpoints/: CHECKPOINT_v0_3_voidline.md
scenarios/: pnr_basic.json
schemas/: railgraph.schema.json
src/: __init__.py
src/agents/: __init__.py
src/constraints/: __init__.py  types.py  volume.py
src/engine/: __init__.py  tick.py
src/envelope/: __init__.py  field.py
src/field/: __init__.py  space_model.py
src/memory/: __init__.py
src/rail/: __init__.py  graph.py
src/replay/: __init__.py  compare.py  fork.py  models.py
tests/: conftest.py  test_constraint_generator.py  test_engine.py  test_field.py  test_rail.py  test_replay.py  test_volume.py
